--- a/configs/hyper_params.yaml
+++ b/configs/hyper_params.yaml
@@ -2,3 +2,5 @@ bagel:
   window_size: 30
   time_feature: "MH"  # MINUTE and HOUR, no need to concern about WEEK
   epochs: 50
+mad:
+  window_size: 5
