add config and beautify plots

--- a/configs/mad_threshold.yaml
+++ b/configs/mad_threshold.yaml
@@ -1,1 +1,17 @@
-default: 20
+'default': 20
+'200': 50
+'302': 50
+'304': 50
+'503': 30
+'error_rate': 0.1
+'istio_requests_total': 100
+'istio_request_duration_milliseconds_sum': 3
+'disk_read_rate': 1e6
+'disk_write_rate': 1e6
+'load': 2
+'mem_usage': 0.2
+'tcp_recv_drop': 1e-9
+'tcp_recv_err': 1e-9
+'tcp_rs': 2e-6
+'tcp_trans_drop': 1e-9
+'tcp_trans_err': 1e-9
