modify confidence interval of litmus

--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -1,2 +1,143 @@
 DATA_ROOT: /home/fanqiliang/data/istio
-fault_injection: []
+fault_injection: 
+  - start: 1614765889  # 0304_abort
+    end: 1614773029
+  - start: 1614830559  # 0304_delay
+    end: 1614837759
+  - start: 1615442199  # 0312_delay_50%
+    end: 1615449579
+  - start: 1615528899  # 0312_abort_50%
+    end: 1615536279
+  - start: 1615557819  # 0313_delay_0.5s
+    end: 1615565259
+  - start: 1615637199  # 0314_delay_0.5s_50%
+    end: 1615644639
+  - start: 1615796739  # 0316_delay_0.5s_50%
+    end: 1615804179
+  - start: 1615979679  # 0318_delay_0.5s_50%_halfhour
+    end: 1615981059
+  - start: 1616036019  # 0318_delay_0.5s_50%
+    end: 1616043519
+  - start: 1616058159  # 0319_delay_0.5s_50%_halfhour
+    end: 1616059899
+  - start: 1616075139  # 0319_delay_0.5s_50%
+    end: 1616082579
+  - start: 1616120842  # 0319_abort_50%_203_halfhour
+    end: 1616123782
+  - start: 1616120559  # 0319_delay_1s_75%_halfhour
+    end: 1616122359
+  - start: 1616134162  # 0319_abort_25%_halfhour_203
+    end: 1616137463
+  - start: 1616133879  # 0319_delay_1s_75%_halfhour_1
+    end: 1616135799
+  - start: 1616141663  # 0320_abort_75%_203_halfhour
+    end: 1616142683
+  - start: 1616143899  # 0320_delay_1s_75%_halfhour
+    end: 1616146479
+  - start: 1616157923  # 0320_abort_40%_203_halfhour
+    end: 1616158402
+  - start: 1616141663  # 0320_delay_2s_75%_halfhour
+    end: 1616142742
+  - start: 1616203283  # 0322_abort_40%_203
+    end: 1616210423
+  - start: 1616203059  # 0322_delay_2s_75%_halfhour
+    end: 1616204679
+  - start: 1616410583  # 0323_abort_75%_203_halfhour
+    end: 1616412862
+  - start: 1616374419  # 0323_delay_1s_75%_halfhour
+    end: 1616375979
+  - start: 1616461343  # 0323_abort_25%_203
+    end: 1616468482
+  - start: 1616461059  # 0323_delay_1s_25%
+    end: 1616468559
+  - start: 1616479582  # 0324_abort_50%_203_halfhour
+    end: 1616481683
+  - start: 1616479239  # 0324_delay_1s_50%_halfhour
+    end: 1616480739
+  - start: 1616496083  # 0324_abort_60%_203_halfhour
+    end: 1616498782
+  - start: 1616479239  # 0324_delay_1s_60%_halfhour
+    end: 1616480739
+  - start: 1616552062  # 0324_abort_60%_203
+    end: 1616555722
+  - start: 1616551779  # 0324_delay_1s_60%
+    end: 1616555139
+  - start: 1616566223  # 0329_abort_60%_203
+    end: 1616569882
+  - start: 1616565939  # 0329_delay_1s_60%
+    end: 1616569119
+  - start: 1616583142  # 0329_abort_60%_203_1
+    end: 1616587043
+  - start: 1616582859  # 0329_delay_1s_60%_1
+    end: 1616585919
+  - start: 1616634562  # 0329_abort_60%_203_2
+    end: 1616636302
+  - start: 1616654002  # 0330_abort_70%_203
+    end: 1616657422
+  - start: 1616653659  # 0330_delay_1s_70%
+    end: 1616654799
+  - start: 1616720422  # 0330_abort_70%_203_1
+    end: 1616723243
+  - start: 1616720079  # 0330_delay_1s_70%_1
+    end: 1616721339
+  - start: 1616739443  # 0330_abort_70%_203_2
+    end: 1616743163
+  - start: 1616739039  # 0330_delay_1s_70%_2
+    end: 1616740719
+  - start: 1616979759  # 0331_delay_1s_70%
+    end: 1616981079
+  - start: 1616998119  # 0331_delay_1s_70%_1
+    end: 1616999379
+  - start: 1617065559  # 0331_delay_1s_70%_2
+    end: 1617066879
+  - start: 1617084879  # 0331_delay_2s_80%
+    end: 1617086919
+  - start: 1617192031  # 0331_delay_2s_80%_1
+    end: 1617193831
+  - start: 1617171031  # 0331_delay_2s_80%_2
+    end: 1617173671
+  - start: 1617192031  # 0405_delay_2s_80%
+    end: 1617193831
+  - start: 1617239371  # 0405_delay_2s_80%_1
+    end: 1617241291
+  - start: 1617256951  # 0405_delay_2s_40%
+    end: 1617258211
+  - start: 1617273211  # 0405_delay_2s_40%_1
+    end: 1617274651
+  - start: 1617365913  # 0405_abort_40%_203
+    end: 1617368793
+  - start: 1617366091  # 0405_delay_2s_40%_2
+    end: 1617368071
+  - start: 1617416551  # 0412_delay_2s_40%
+    end: 1617418651
+  - start: 1617431431  # 0412_delay_2s_40%_1
+    end: 1617433771
+  - start: 1617527731  # 0412_delay_2s_40%_2
+    end: 1617530551
+  - start: 1617589051  # 0412_delay_2s_25%
+    end: 1617590791
+  - start: 1617606091  # 0412_delay_2s_25%_1
+    end: 1617608311
+  - start: 1617624391  # 0412_delay_2s_25%_2
+    end: 1617625531
+  - start: 1617671071  # 0412_delay_2s_100%
+    end: 1617672391
+  - start: 1617689911  # 0412_delay_2s_100%_1
+    end: 1617692011
+  - start: 1617707071  # 0412_delay_2s_100%_2
+    end: 1617709531
+  - start: 1617759571  # 0412_delay_2s_100%_3
+    end: 1617761251
+  - start: 1617775231  # 0412_delay_2s_25%_3
+    end: 1617776551
+  - start: 1617792091  # 0412_delay_2s_25%_4
+    end: 1617793771
+  - start: 1617843211  # 0412_delay_2s_25%_5
+    end: 1617845611
+  - start: 1617865351  # 0412_delay_2s_25%_6
+    end: 1617867151
+  - start: 1617931531  # 0412_delay_2s_25%_7
+    end: 1617933571
+
+
+  # - start:  1615796739
