--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -138,6 +138,17 @@ fault_injection:
     end: 1617867151
   - start: 1617931531  # 0412_delay_2s_25%_7
     end: 1617933571
-
+  - start: 1617949471  # 0413_delay_2s_60%
+    end: 1617951631
+  - start: 1618223371  # 0413_delay_2s_60%_1
+    end: 1618230631
+  - start: 1618275157  # 0414_abort_60%_203
+    end: 1618276837
+  - start: 1618288417  # 0414_abort_60%_203_1
+    end: 1618290157
+  - start: 1618308931  # 0414_delay_2s_60%
+    end: 1618310371
+  - start: 1618362457  # 0414_abort_60%_203_2
+    end: 1618364497
 
   # - start:  1615796739
