--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -148,5 +148,20 @@ fault_injection:
     end: 1618290157
   - start: 1618308931  # 0414_delay_2s_60%
     end: 1618310371
+  - start: 1618362457  # 0414_abort_60%_203_2
+    end: 1618364497
+  - start: 1618362391  # 0414_delay_2s_60%_1
+    end: 1618364431
+  - start: 1618374517  # 0414_abort_60%_203_3
+    end: 1618375957
+  - start: 1618374451  # 0414_delay_2s_60%_2
+    end: 1618375891
+  - start: 1618391677  # 0415_abort_60%_203
+    end: 1618393117
+  - start: 1618391611  # 0415_delay_2s_60%
+    end: 1618392991
+  - start: 1618403677  # 0415_abort_30%_203
+    end: 1618404577
+  - start: 1618403611  # 0415_delay_2s_30%
+    end: 1618404511
 
-  # - start:  1615796739
