--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -164,4 +164,15 @@ fault_injection:
     end: 1618404577
   - start: 1618403611  # 0415_delay_2s_30%
     end: 1618404511
-
+  - start: 1618449097  # 0416_abort_30%_203
+    end: 1618450957
+  - start: 1618449031  # 0416_delay_2s_30%
+    end: 1618450831
+  - start: 1618462777  # 0416_normal_203
+    end: 1618464937
+  - start: 1618462651  # 0416_normal
+    end: 1618464691
+  - start: 1618482817  # 0416_normal_203_1
+    end: 1618484077
+  - start: 1618482751  # 0416_normal_1
+    end: 1618484011
