--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -176,3 +176,21 @@ fault_injection:
     end: 1618484077
   - start: 1618482751  # 0416_normal_1
     end: 1618484011
+  - start: 1618533157  # 0417_normal_203
+    end: 1618534657
+  - start: 1618533151  # 0417_normal
+    end: 1618534591
+  - start: 1618544257  # 0417_normal_203_1
+    end: 1618545697
+  - start: 1618544191  # 0417_normal_1
+    end: 1618545631
+  - start: 1618558297  # 0417_normal_203_2
+    end: 1618559977
+  - start: 1618558231  # 0417_normal_2
+    end: 1618559851
+  - start: 1618574497  # 0417_normal_203_3
+    end: 1618575817
+  - start: 1618574431  # 0417_normal_3
+    end: 1618575691
+
+
