--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -192,5 +192,16 @@ fault_injection:
     end: 1618575817
   - start: 1618574431  # 0417_normal_3
     end: 1618575691
-
+  - start: 1618665031  # 0420_normal
+    end: 1618672231
+  - start: 1618751131  # 0420_normal_1
+    end: 1618751971
+  - start: 1618796491  # 0420_delay_1s_50%
+    end: 1618797631
+  - start: 1618814131  # 0420_delay_1s_50%_1
+    end: 1618815991
+  - start: 1618824391  # 0420_delay_1s_50%_2
+    end: 1618826131
+  - start: 1618878571  # 0420_delay_1s_50%_3
+    end: 1618885891
 
