--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -204,4 +204,7 @@ fault_injection:
     end: 1618826131
   - start: 1618878571  # 0420_delay_1s_50%_3
     end: 1618885891
-
+  - start: 1618991551  # 0422_delay_1s_50%
+    end: 1618994551
+  - start: 1619004391  # 0422_delay_1s_50%_1
+    end: 1619006971
