--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -208,3 +208,13 @@ fault_injection:
     end: 1618994551
   - start: 1619004391  # 0422_delay_1s_50%_1
     end: 1619006971
+  - start: 1619054431  # 0424_abort_50%
+    end: 1619057311
+  - start: 1619071171  # 0424_abort_50%_1
+    end: 1619078011
+  - start: 1619085991  # 0424_abort_50%_2
+    end: 1619087131
+  - start: 1619160391  # 0424_abort_50%_3
+    end: 1619161771
+  - start: 1619170471  # 0424_abort_50%_4
+    end: 1619171731
