--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -218,3 +218,15 @@ fault_injection:
     end: 1619161771
   - start: 1619170471  # 0424_abort_50%_4
     end: 1619171731
+  - start: 1619238871  # 0426_delay_2s_25%
+    end: 1619240431
+  - start: 1619251051  # 0426_delay_2s_25%_1
+    end: 1619252371
+  - start: 1619266771  # 0426_delay_2s_25%_2
+    end: 1619268091
+  - start: 1619319391  # 0426_delay_2s_25%_3
+    end: 1619320951
+  - start: 1619334871  # 0426_delay_2s_25%_4
+    end: 1619336191
+  - start: 1619347291  # 0426_delay_2s_25%_5
+    end: 1619348371
