--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -230,3 +230,15 @@ fault_injection:
     end: 1619336191
   - start: 1619347291  # 0426_delay_2s_25%_5
     end: 1619348371
+  - start: 1619399131  # 0428_delay_2s_25%
+    end: 1619400211
+  - start: 1619409151  # 0428_delay_2s_25%_1
+    end: 1619410591
+  - start: 1619429551  # 0428_delay_2s_25%_2
+    end: 1619432431
+  - start: 1619483971  # 0428_abort_25%
+    end: 1619485411
+  - start: 1619495131  # 0428_abort_25%_1
+    end: 1619496271
+  - start: 1619517271  # 0428_abort_25%_2
+    end: 1619524651
