--- a/configs/global_config.yaml
+++ b/configs/global_config.yaml
@@ -242,3 +242,19 @@ fault_injection:
     end: 1619496271
   - start: 1619517271  # 0428_abort_25%_2
     end: 1619524651
+  - start: 1619581471  # 0509_abort_25%
+    end: 1619583091
+  - start: 1619594071  # 0509_abort_25%_1
+    end: 1619595271
+  - start: 1619609071  # 0509_abort_25%_2
+    end: 1619612611
+  - start: 1619659891  # 0509_abort_25%_3
+    end: 1619661151
+  - start: 1619676691  # 0509_abort_25%_4
+    end: 1619680051
+  - start: 1619688091  # 0509_abort_25%_5
+    end: 1619691091
+  - start: 1619748211  # 0509_abort_25%_6
+    end: 1619749051
+  - start: 1619762311  # 0509_abort_25%_7
+    end: 1619763451
